@@ -197,7 +197,7 @@ Esto podria provocar que otros sitios que usan ZVFS (por ejemplo esxdos handler)
 desde filesel era la mmc
 Quiza solo el menu (y no esxdos handler , zxpand u otros) debe usar ZVFS. El resto, rutinas de sistema? -> esxdos, zxpand etc ya NO usan ZVFS
 
--zvfs conv, visores y demas previews. util_extract_p, etc...
+-zvfs file converters varios
 
 -listar en alguna ayuda todos los posibles:
 *previews de archivos (preview al mover cursor)
